--- a/api/package.json
+++ b/api/package.json
@@ -11,6 +11,7 @@
   "author": "Ivan Tsankov",
   "license": "ISC",
   "dependencies": {
+    "@koa/cors": "^3.1.0",
     "bcrypt": "^5.0.1",
     "koa": "^2.13.3",
     "koa-bodyparser": "^4.3.0",
